<resources>
    <string name="app_name">Employeedashboard</string>
    <string name="sstechnos_title">SSTechnos</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="dashboard_title">SSTechnos Home Page</string>
    <string name="employee_listings">Employee Listings</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="view_documents">View Documents</string>
    <string name="change_password">Change Password</string>
    <string name="project_listings">Project Listings</string>
    <string name="validate">Validate</string>
    <string name="registration_title">Please enter the following details to validate your employee account:</string>
    <string name="back">Back</string>
    <string name="contact_info_title">Please enter the following contact info:</string>
    <string name="emergency_contact">Emergency Contact Info:</string>
    <string name="submit">Submit</string>
    <string name="upload_id_card">Upload the required documents</string>
    <string name="create">Create</string>
    <string name="create_account">Create your new account</string>
    <string name="add_employee">Add Employee</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="role">Role:</string>
    <string name="jobTitle">Job Title:</string>
    <string name="salary">Salary:</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_timesheet">Enter Timesheet</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUES</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THURS</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="save">Save</string>
    <string name="sending_email">Sending Email ...</string>
    <string name="settings">Settings</string>
    <string name="contact_info">Contact Info</string>
    <string name="upload_photo">Upload Profile Picture</string>
    <string name="approve_timesheets">Approve Timesheets</string>
    <string name="admin">Admin</string>
    <string name="employeeId">Employee Id:</string>
    <string name="upload_new_document">Upload New Document</string>
    <string name="log_out">Log Out</string>
    <string name="approve">Approve</string>
    <string name="delete_employee_title">Delete Employee</string>
    <string name="delete_employee_message">Are you sure you want to delete this employee from the database?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_employee_title">Update Employee</string>
    <string name="update_employee_message">Are you sure you want to update this employee in the database?</string>
    <string name="email_label">Email:</string>
    <string name="address_label">Address:</string>
    <string name="phone_label">Phone #:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="relationship_label">Relationship:</string>
    <string name="approve_timesheet_message">Would you like to approve this timesheet?</string>
</resources>
