<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/beige"
        tools:context=".employee.TimeSheetActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/leftArrow_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_gravity="center|center_vertical"
                android:src="@drawable/ic_left_arrow"/>

        <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_gravity="center"
                style="@style/H2DarkRedCasual"
                android:text="December" />

        <ImageView
                android:id="@+id/rightArrow_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:visibility="gone"
                android:layout_gravity="center|center_vertical"
                android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/monday" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/tuesday" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/wednesday" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/thursday" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/friday" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/saturday" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                style="@style/bodyCasualBold"
                android:text="@string/sunday" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/week1_monday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_tuesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_wednesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_thursday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_friday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_saturday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week1_sunday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/week2_monday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_tuesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_wednesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_thursday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_friday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_saturday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week2_sunday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/week3_monday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_tuesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_wednesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_thursday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_friday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_saturday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week3_sunday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/week4_monday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_tuesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_wednesday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_thursday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_friday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_saturday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
        <EditText
                android:id="@+id/week4_sunday"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="0"
                android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="80dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/timesheet_saveButton"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/save"/>
        <Button
                android:id="@+id/timesheet_submitButton"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                style="@style/ButtonStyle"
                android:text="@string/submit"/>

    </LinearLayout>


</LinearLayout>